test/ClangImporter/import-as-member-objc.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -I %S/../IDE/Inputs/custom-modules %s -verify -enable-objc-interop

import ImportAsMember.Class

fn doIt(s: SomeClass) {
  s.doIt()
}

// Make sure we can't find doIt() via dynamic lookup.
fn doItDynamic(s: AnyObject) {
  s.doIt() // expected-error {{value of type 'AnyObject' has no member 'doIt'}}
}
